--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,17 @@
     </style>
 
 
+    <style name="BottomDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item> <!-- 背景变暗 -->
+        <!-- 关键步骤：将窗口动画指向我们自定义的动画样式 -->
+        <item name="android:windowAnimationStyle">@style/DialogAnimation.FromBottom</item>
+    </style>
+
+    <!-- 定义具体的窗口进入和退出动画 -->
+    <style name="DialogAnimation.FromBottom" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+    </style>
 </resources>
