--- a/app/src/main/res/layout/layout_native_self.xml
+++ b/app/src/main/res/layout/layout_native_self.xml
@@ -95,27 +95,21 @@
         android:id="@+id/native_ad_logo_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/mia_commons_header_back_pressed"
         android:layout_above="@+id/native_ad_image"
         android:layout_alignParentRight="true"
         android:layout_marginRight="2dp"
         android:layout_marginBottom="2dp"
         android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/native_self_adlogo"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_marginLeft="2dp"
-        android:src="@drawable/ad_logo" />
+
 
     <TextView
         android:id="@+id/native_ad_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/native_self_adlogo"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        android:layout_toRightOf="@id/native_self_adlogo"
         android:background="#888888"
         android:gravity="center"
         android:paddingLeft="2dp"
